...

@Composable
fun RepositoryInfoRoute(
    repositorySummary: GithubRepositorySummary,
    navigateRepositoryIssueFragment: () -> Unit
) {
    RepositoryInfoScreen(
        repositorySummary = repositorySummary,
        onTapIssue = navigateRepositoryIssueFragment
    )
}

@OptIn(ExperimentalMaterial3Api::class)
...
