...
fun RepositoryIssueRoute(
    modifier: Modifier = Modifier,
    viewModel: RepositoryIssueViewModel = hiltViewModel()
) {
    val issues by viewModel.issues.collectAsState()

    RepositoryIssueScreen(
        issues = issues
    )
}

@OptIn(ExperimentalMaterial3Api::class)
@Composable
...
