...
        return dummySearchResults
    }
}

val dummySearchResults = listOf(
    GithubRepositorySummary(
        name = "dummy1",
        fullName = "dummy1",
        ownerIconUrl = "https://dummy1.com",
        ownerName = "dummy1",
        description = "dummy1",
        language = "Kotlin",
        stargazersCount = 100,
...
