...

        IconWithCount(
            modifier = Modifier
                .clickable {
                    onTapIssue()
                }
                .testTag("IssueButton"),
            iconPainterResource = painterResource(id = R.drawable.issue_opened),
            count = repositorySummary.openIssuesCount
        )
    }
}

...
